did a test and finally figured out the text alignment and image issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -6,6 +6,22 @@
   border-radius: 0 !important;
 }
 
+#img-bricktest {
+  padding: 0;
+
+}
+
+#bricktest {
+  padding: 5%;
+}
+
+
+
+.float-right {
+  padding-top: 25%;
+  text-align: center;
+}
+
 
 body {
   font-family: 'Lato', sans-serif;
@@ -115,8 +131,6 @@ i {
 .card {
   border: none;
   background: white;
-  /*min-height: 100%;
-  margin: 5%;*/
 }
 
 .card-img-top {
@@ -137,4 +151,11 @@ i {
 #main-footer {
   color: white;
   font-size: 20px;
+}
+
+@media screen and (min-width: 576px) {
+  .card-block h3 {
+    font-size: 2.5em;
+  }
+
 }
